force-app/main/default/objects/Screen__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <referenceTo>Device__c</referenceTo>
    <relationshipLabel>Screens</relationshipLabel>
    <relationshipName>Screens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>