force-app/main/default/objects/Screen__c/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <label>Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landscape</fullName>
                <default>true</default>
                <label>Landscape</label>
            </value>
            <value>
                <fullName>Portrait</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>