force-app/main/default/objects/Screen__c/fields/Screenshot_URL__c.field-meta.xml
<CustomField>
    <fullName>Screenshot_URL__c</fullName>
    <label>Screenshot URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>